# GuessWho

./: Cargo.toml  README.md  TODO  jj.json  main.rs  modeleRapportLatex (2).tex  modeleRapportLatex.tex  qui-est-ce-image.json  test.json  test2.json  test3.json  tous.json  tous2.json
generator/: Cargo.toml
generator/src/: main.rs  proto.rs
hello-rocket/: Cargo.toml
hello-rocket/src/: main.rs
src/: main.rs  parsing.rs
src/personnages/: personnages.json
