[package]
name = "qui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
fltk-theme = "0.4.2"
serde_json = { version = "1.0"}
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"]}
once_cell = "1"
